--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,11 @@
   /* background-size: cover ; */
   background-color: #11070700;
 }
+ 
+canvas {
+  width: 400px;
+  height: 300px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
